--- a/Randomizer/Base.lproj/Main.storyboard
+++ b/Randomizer/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zrG-cq-3AE">
     <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -79,9 +78,10 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Random number" id="H6W-hB-z5U">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="ltF-Nv-T4R"/>
                         <barButtonItem key="rightBarButtonItem" title="Settings" id="P1m-lX-3DR">
                             <connections>
-                                <segue destination="tIp-eL-GnD" kind="show" id="KsB-hU-wJR"/>
+                                <segue destination="tIp-eL-GnD" kind="presentation" id="Yhn-pb-GgH"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -96,21 +96,69 @@
             </objects>
             <point key="canvasLocation" x="798" y="4"/>
         </scene>
-        <!--View Controller-->
+        <!--Settings View Controller-->
         <scene sceneID="oMn-tv-Ywe">
             <objects>
-                <viewController id="tIp-eL-GnD" sceneMemberID="viewController">
+                <viewController id="tIp-eL-GnD" customClass="SettingsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZFu-wX-HyN">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="863"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="48" translatesAutoresizingMaskIntoConstraints="NO" id="5CJ-Xa-7WS">
+                                <rect key="frame" x="60" y="119" width="310" height="116"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Minimum Value" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0KI-dp-Gf6">
+                                        <rect key="frame" x="0.0" y="0.0" width="310" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Maximum Value" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ON5-3t-96R">
+                                        <rect key="frame" x="0.0" y="82" width="310" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="u7y-oF-GzT">
+                                <rect key="frame" x="167" y="350" width="91" height="96"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ruj-4k-epT">
+                                        <rect key="frame" x="0.0" y="0.0" width="91" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Save"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DLr-nX-r02">
+                                        <rect key="frame" x="0.0" y="48" width="91" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Cancel">
+                                            <color key="titleColor" systemColor="systemRedColor"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="cancelButtonPressed" destination="tIp-eL-GnD" eventType="touchUpInside" id="j70-HE-weU"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Fpr-Pc-JCV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Fpr-Pc-JCV" firstAttribute="trailing" secondItem="5CJ-Xa-7WS" secondAttribute="trailing" constant="60" id="0ZD-lZ-t0o"/>
+                            <constraint firstItem="5CJ-Xa-7WS" firstAttribute="leading" secondItem="Fpr-Pc-JCV" secondAttribute="leading" constant="60" id="6Aq-zL-uqt"/>
+                            <constraint firstItem="5CJ-Xa-7WS" firstAttribute="top" secondItem="Fpr-Pc-JCV" secondAttribute="top" constant="60" id="YXb-ld-NhR"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="vzk-fA-Peo"/>
+                    <connections>
+                        <outlet property="maxValueTF" destination="ON5-3t-96R" id="d7M-i8-1FK"/>
+                        <outlet property="minValueTF" destination="0KI-dp-Gf6" id="Y0j-pj-EG5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ayp-2g-oHG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1529" y="4"/>
+            <point key="canvasLocation" x="1527.9069767441861" y="3.8626609442060089"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="KZP-45-9pY">
@@ -137,6 +185,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
