--- a/Randomizer/Base.lproj/Main.storyboard
+++ b/Randomizer/Base.lproj/Main.storyboard
@@ -127,6 +127,9 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Save"/>
+                                        <connections>
+                                            <segue destination="8Ov-gZ-3pf" kind="unwind" unwindAction="unwindFor:" id="BUq-Yy-tof"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DLr-nX-r02">
                                         <rect key="frame" x="0.0" y="48" width="91" height="48"/>
@@ -157,6 +160,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ayp-2g-oHG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="8Ov-gZ-3pf" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1527.9069767441861" y="3.8626609442060089"/>
         </scene>
